# Patchwork

./: Cargo.toml  LICENSE  README.md
src/: buffer.rs  lib.rs  main.rs  pane.rs  raw_mode.rs  renderer.rs  shape.rs  terminal.rs  text.rs
